Fixed wrong content for GoodReads and spacing

--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -20,7 +20,7 @@
 
   &-item {
     display: inline-block;
-    margin: 0 0.2rem;
+    margin: 0 0.4rem;
 
     a {
       color: $white;
